Stop hyphenated names overflowing
Stop hyphenated names of creatures from overflowing their box.

--- a/tetris_auto.css
+++ b/tetris_auto.css
@@ -177,6 +177,7 @@ body {
     margin: 0px;
     padding: 0px;
     border-right: 1px solid #AAA;
+    overflow: hidden;
 }
 
 .creature p {
